--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "name": "克拉前端技术分享",
     "ver": "1",
-    "testing": true
+    "testing": true,
+    "logo":"https://b-ssl.duitang.com/uploads/item/201706/21/20170621203304_HzBih.thumb.700_0.jpeg"
   }
